# tinyweb

./: .config  .travis.yml  CMakeLists.txt  Makefile  README.md  arm_toolchain.cmake  cgi-getcookie.c  cgi-getfield.c  echo.c  mongoose.c  mongoose.h  ostro_toolchain.cmake  server.pem  tinyweb.c  webservice.c  websocket.c
CommandLineBuild/: makefile
android/: .project  AndroidManifest.xml  build.gradle  gradle.properties
android/assets/system/: service.sh
android/assets/system/libs/armeabi/: busybox  cgi-getcookie  cgi-getfield  tinyweb
android/assets/system/libs/armeabi-v7a/: cgi-getcookie  cgi-getfield  tinyweb  unzip
android/assets/system/libs/mips/: cgi-getcookie  cgi-getfield  tinyweb
android/assets/system/libs/x86/: busybox  cgi-getcookie  cgi-getfield  tinyweb  unzip
android/assets/system/libs/x86_64/: busybox  cgi-getcookie  cgi-getfield  tinyweb
android/native/jni/: Android.mk  Application.mk
android/res/layout/: activity_fullscreen.xml
android/res/values/: strings.xml
android/src/com/example/tinywebtestservice/util/: SystemUiHider.java  (+2 more)
android/src/com/intel/tinywebtestservice/: Constants.java  FullscreenActivity.java  TinywebService.java
packaging/: tinyweb.spec
tools/: install_android_ndk.sh  install_ostro_sdk.sh
tools/busybox_dest/libs/arm64-v8a/: busybox
tools/busybox_dest/libs/armeabi/: unzip
tools/busybox_dest/libs/armeabi-v7a/: busybox
tools/busybox_dest/libs/mips/: busybox  unzip
tools/busybox_dest/libs/mips64/: busybox
tools/busybox_dest/libs/x86/: busybox
tools/busybox_dest/libs/x86_64/: busybox
